Change the get method for obtaining a user from a wallet id
